--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: Dodgebolt
-version: ${project.version}
+version: 1.1
 main: me.devvy.dodgebolt.Dodgebolt
-api-version: 1.16
+api-version: 1.20
 prefix: Dodgebolt
 depend: [WorldEdit]
 commands:
